GCI-90: Fix three critical issues on OpenMRS sonarqube. Removed inefficient use of keySet iterator instead of entrySet Replaced inefficient new Long(long) constructor with Long.valueOf(long)